# Cortex

./: .cspell.json  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.json  .memory-bank-index  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  smithery.yaml
.claude/: CLAUDE.md  settings.json
.cortex/: code-review-report-2026-01-15.md  index.json  index.tmp  optimization.json  validation.json
.cortex/.session/: context-session-3df67b66821d.json  context-session-458acf9df579.json  context-session-7c3cf13a62dd.json  context-session-b4842a466e3f.json  context-session-caacf4f90597.json  context-session-f9b367db3e5a.json  context-usage-statistics.json
.cortex/history/: activeContext_v1.md  activeContext_v10.md  activeContext_v11.md  activeContext_v2.md  activeContext_v3.md  activeContext_v4.md  activeContext_v5.md  activeContext_v6.md  activeContext_v7.md  activeContext_v8.md  activeContext_v9.md  ensure-proper-logging-fastmcp_v1.md  file_v1.md  phase-45-add-mcp-annotations_v1.md  phase-45-add-mcp-annotations_v2.md  phase-46-add-progress-reporting_v1.md  phase-46-add-progress-reporting_v2.md  phase-60-improve-manage-file-discoverability.plan_v1.md  progress_v1.md  progress_v10.md  progress_v11.md  progress_v2.md  progress_v3.md  progress_v4.md  progress_v5.md  progress_v6.md  progress_v7.md  progress_v8.md  progress_v9.md  roadmap_v1.md  roadmap_v10.md  roadmap_v11.md  roadmap_v2.md  roadmap_v3.md  roadmap_v5.md  roadmap_v7.md  roadmap_v8.md  roadmap_v9.md  test_links_v1.md  test_no_links_v1.md  (+4 more)
.cortex/memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  roadmap.md  systemPatterns.md  techContext.md  tmp-mcp-test.md
.cortex/plans/: QUICK_START.md  STATUS.md  conditional-prompt-registration.md  enhance-tool-descriptions.plan.md  ensure-proper-logging-fastmcp.md  phase-10-summary.md  phase-10.1-critical-fixes.md  phase-10.3.1-day2-relevance-scorer-summary.md  phase-10.3.1-day5-rules-insight-summary.md  phase-10.3.2-benchmarks-completion-summary.md  phase-10.4-test-coverage-improvement.md  phase-11-tool-verification.md  phase-12-commit-workflow-mcp-tools.md  phase-13-investigate-mcp-tool-path-resolution.md  phase-14-centralize-path-resolution.md  phase-18-markdown-lint-fix-tool.md  phase-19-fix-mcp-server-crash.md  phase-2-dry-linking.md  phase-20-code-review-fixes.md  phase-21-health-check-optimization.md  phase-22-fix-commit-pipeline-quality-gate.md  phase-23-fix-ci-failure-validation-refactor.md  phase-24-fix-roadmap-text-corruption.md  phase-25-fix-ci-failure-commit-302c5e2.md  phase-26-unify-cache-directory.md  phase-27-script-generation-prevention.md  phase-28-enforce-mcp-tools-for-cortex-operations.md  phase-29-track-mcp-tool-usage.md  phase-3-infrastructure-validation.md  phase-30-fix-ci-failure-commit-42a3362.md  phase-31-fix-optimize-context-stale-file-errors.md  phase-32-fix-mcp-tool-connection-closure-errors.md  phase-33-fix-execute-pre-commit-checks-json-parsing-error.md  phase-34-ensure-mcp-tool-timeouts.md  phase-35-fix-execute-pre-commit-checks-mcp-json-error.md  phase-36-enforce-mcp-tool-failure-protocol.md  phase-38-investigate-recurring-mcp-tool-serialization-errors.md  phase-4-rules-enhancement.md  phase-41-evaluate-fastmcp-2-migration.md  phase-42-investigate-execute-pre-commit-checks-json-error-commit-20260117-122412.md  (+53 more)
.cortex/prompts/: prompts-manifest.json  (+2 more)
.plan/: README.md  phase-1-foundation.md  phase-10-summary.md  phase-10.2-file-size-compliance.md  phase-10.2.2-completion-summary.md  phase-10.2.3-completion-summary.md  phase-10.3-final-excellence.md  phase-10.3.1-baseline-performance.md  phase-10.3.1-day1-consolidation-detector-summary.md  phase-10.3.1-day3-pattern-analyzer-summary.md  phase-10.3.1-day4-link-parser-summary.md  phase-10.3.1-day6-completion-summary.md  phase-10.3.1-performance-optimization-implementation-plan.md  phase-10.3.1-visual-summary.md  phase-5.2-completion-summary.md  phase-6-completion-summary.md  phase-6-shared-rules.md  phase-7-code-quality.md  phase-7.1.1-completion-summary.md  phase-7.1.2-progress.md  phase-7.10-progress.md  phase-7.11-completion-summary.md  phase-7.12-completion-summary.md  phase-7.12-integration-summary.md  phase-7.2-completion-summary.md  phase-7.2-cursor-mcp-ergonomics.md  phase-7.2-quick-reference.md  phase-7.4-completion-summary.md  phase-7.9-completion-summary.md  phase-7.9-lazy-loading.md  phase-8-completion-summary.md  phase-8-project-structure.md  phase-9-completion-summary.md  phase-9-excellence-98.md  phase-9.0-completion-summary.md  phase-9.1-critical-path-strategy.md  phase-9.1-progress-summary.md  phase-9.1-rules-compliance.md  phase-9.1.3-completion-summary.md  phase-9.1.4-completion-summary.md  (+29 more)
docs/: architecture.md  getting-started.md  index.md  mcp-tool-timeouts.md
memory-bank/: techContext.md
scripts/: analyze_complexity.py  analyze_dependencies.py  analyze_function_lengths.py  analyze_performance.py  benchmark_performance.py  check_file_sizes.py  check_function_lengths.py  find_long_functions.py  fix_markdown_lint.py  populate_tiktoken_cache.py  profile_operations.py
tests/: README.md  __init__.py  conftest.py  test_core_modules.py  test_each_manager.py  test_init.py  test_integration.py  test_managers.py  test_minimal.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5_1.py  test_phase5_2.py  test_phase5_3_4.py  test_phase6.py  test_phase6_imports.py  test_quick.py  test_rules_enhancement.py  test_simple.py  test_token.py  test_ultra_simple.py
(+530 files in other folders)
