[project]
name = "cortex"
version = "0.2.0"
description = "Cortex - AI Memory & Context Management Server"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.1.0",
]
server = [
    "httpx",
    "uvicorn",
    "starlette",
]
all = [
    "httpx",
    "uvicorn",
    "starlette",
]

[project.scripts]
cortex = "cortex.main:main"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.1.0",
    "pyright>=1.1.400",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting (isort replacement)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by Black)
]

[tool.ruff.lint.isort]
# Configure ruff's isort (compatible with isort's black profile by default)
known-first-party = ["cortex"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
]
disallow_untyped_defs = true

[tool.coverage.run]
# Coverage configuration (pytest config in pytest.ini)
source = ["src/cortex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/protocols/*.py",
    "*/benchmarks/*.py",
    # Model files contain only Pydantic models definitions (type definitions, no runtime logic)
    "*/models.py",
    # Template files contain only string constants
    "*/templates/*.py",
    # Guide files contain only string constants for documentation
    "*/guides/*.py",
    # Container is dependency injection infrastructure
    "*/container.py",
    # Type alias files contain only type definitions (no runtime logic)
    "*/types.py",
    # Optimization types contain only type aliases
    "*/optimization_types.py",
    # Strategy metrics contain Pydantic models (tested via integration)
    "*/strategy_metrics.py",
    # Strategy selection is tested via integration with context optimizer
    "*/strategy_selection.py",
    # Section processing is tested via integration
    "*/section_processing.py",
    # Manager initialization modules - infrastructure (tested via integration)
    "*/manager_initialization.py",
    "*/initialization_health.py",
    "*/manager_groups.py",
    # Structure analysis modules - tested via integration
    "*/structure_analysis.py",
    "*/structure_detection.py",
    "*/structure_metrics.py",
    # Rollback modules are tested via integration with rollback_manager
    "*/rollback_conflicts.py",
    "*/rollback_execution.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cortex = [
    "resources/tiktoken_cache/*",
]
